﻿What's Fixed:
1. Fixed issue where navigating backwards through settings minimized the app.
2. Fixed issue where app crashed when song reached the end.
3. Fixed crash when navigating to Bakers (artists).
4. Fixed app hang when navigating to Bakers (artists).
5. Fixed app crash when library was loading.