@@ -1,4 +1,5 @@
-﻿using System;
+﻿using BreadPlayer.Dispatcher;
+using System;
 using System.Collections.Generic;
 using System.Collections.Specialized;
 using System.ComponentModel;
@@ -12,7 +13,8 @@ namespace BreadPlayer.Extensions
         : ThreadSafeObservableCollection<T>
     {
         private CoreDispatcher _dispatcher = CoreApplication.MainView.CoreWindow.Dispatcher;
-
+        private const string CountName = nameof(Count);
+        private const string IndexerName = "Item[]";
         /// <summary>
 		/// Creates a new SortedObservableCollection instance.
 		/// </summary>
@@ -29,89 +31,39 @@ namespace BreadPlayer.Extensions
         /// <summary>
         /// Adds an item to a sorted collection.
         /// </summary>
-        public async void AddSorted(T item)
+        public void AddSorted(T item, bool notify)
         {
-            await _dispatcher.RunAsync(CoreDispatcherPriority.Normal, () =>
+            int i = 0;
+            int j = Count - 1;
+
+            while (i <= j)
             {
-                int i = 0;
-                int j = Count - 1;
+                int n = (i + j) / 2;
+                int c = _comparer.Compare(_keySelector(item), _keySelector(this[n]));
 
-                while (i <= j)
+                if (c == 0) { i = n; break; }
+                if (c > 0)
                 {
-                    int n = (i + j) / 2;
-                    int c = _comparer.Compare(_keySelector(item), _keySelector(this[n]));
-
-                    if (c == 0) { i = n; break; }
-                    if (c > 0)
-                    {
-                        i = n + 1;
-                    }
-                    else
-                    {
-                        j = n - 1;
-                    }
+                    i = n + 1;
                 }
-
+                else
+                {
+                    j = n - 1;
+                }
+            }
+            if (notify)
                 Insert(i, item);
-            });
+            else
+                Items.Insert(i, item);
         }
+        
+        public async void OnCollectionReset() => await BreadDispatcher.InvokeAsync(() => OnCollectionChanged(new NotifyCollectionChangedEventArgs(NotifyCollectionChangedAction.Reset)));
 
-        public void AddSortedRange(IEnumerable<T> range)
-        { 
-            try
-            {
-                // get out if no new items
-                if (range == null || !range.Any())
-                {
-                    return;
-                }
-
-                // add the items, making sure no events are fired
-
-                _isObserving = false;
-                var objectArray = range.ToArray();
-                for (int i = 0; i < objectArray.Count(); i++)
-                {
-                    AddSorted(objectArray[i]);
-                }
-                _isObserving = true;
-
-                // fire the events
-                OnPropertyChanged(new PropertyChangedEventArgs("Count"));
-                OnPropertyChanged(new PropertyChangedEventArgs("Item[]"));
-                // this is tricky: call Reset first to make sure the controls will respond properly and not only add one item
-                // LOLLO NOTE I took out the following so the list viewers don't lose the position.
-                //if(reset)
-                OnCollectionChanged(new NotifyCollectionChangedEventArgs(action: NotifyCollectionChangedAction.Reset));
-                // OnCollectionChanged(new NotifyCollectionChangedEventArgs(NotifyCollectionChangedAction.Add));
-            }
-            catch (Exception ex)
-            {
-                BLogger.E("Error occured while adding range to TSCollection.", ex);
-            }
-        }
-
-        protected override void OnCollectionChanged(NotifyCollectionChangedEventArgs e)
+        public void NotifyProperties(bool count = true)
         {
-            try
-            {
-                if (_isObserving)
-                {
-                    base.OnCollectionChanged(e);
-                }
-            }
-            catch (Exception ex)
-            {
-                BLogger.E("Error occured while updating TSCollection on collectionchanged.", ex);
-            }
-        }
-
-        protected override void OnPropertyChanged(PropertyChangedEventArgs e)
-        {
-            if (_isObserving)
-            {
-                base.OnPropertyChanged(e);
-            }
-        }
+            if (count)
+                OnPropertyChanged(new PropertyChangedEventArgs(CountName));
+            OnPropertyChanged(new PropertyChangedEventArgs(IndexerName));
+        }       
     }
 }
