@@ -8,13 +8,19 @@
     mc:Ignorable="d">
     <Page.Resources>
         <ItemsPanelTemplate x:Key="ToastsPanel">
-            <ItemsStackPanel Orientation="Vertical" />
+            <ItemsStackPanel Orientation="Vertical"/>
         </ItemsPanelTemplate>
         <ItemsPanelTemplate x:Key="BreadsBakersPanel">
-            <ItemsWrapGrid Orientation="Horizontal" />
+            <ItemsWrapGrid Orientation="Horizontal" CacheLength="1"/>
         </ItemsPanelTemplate>
+        <Style x:Key="ToastItemStyle" TargetType="ListViewItem">
+            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+            <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+            <Setter Property="VerticalAlignment" Value="Stretch"/>
+        </Style>
     </Page.Resources>
-    <Grid>        
+    <Grid>          
         <ListView x:Name="searchResultsList" ItemsPanel="{StaticResource ToastsPanel}" ItemTemplate="{StaticResource MediafileTemplate}"></ListView>
     </Grid>
 </Page>
